test/integration/errors/compile-error/src/index.tsx
expor t functi on functi on App() {
  return <div>App</di v>;
}
